--- a/Wallet_part1/Wallet_part1/Wallet_part1.vcxproj
+++ b/Wallet_part1/Wallet_part1/Wallet_part1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Callend.cpp" />
+    <ClCompile Include="functional_Callend.cpp" />
     <ClCompile Include="IncomesSpends.cpp" />
     <ClCompile Include="Inits.cpp" />
     <ClCompile Include="Show.cpp" />
@@ -135,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Callend.h" />
+    <ClInclude Include="functional_Callend.h" />
     <ClInclude Include="IncomesSpends.h" />
     <ClInclude Include="Inits.h" />
     <ClInclude Include="Show.h" />
